#WIP Edges Appear, but don't draw in correct place

--- a/src/Vertex.css
+++ b/src/Vertex.css
@@ -13,3 +13,9 @@
 .Vertex.container {
     position: fixed;
 }
+
+.Vertex-Selected {
+    border-width: 0.2rem;
+    border-style: solid;
+    border-color: dodgerblue;
+}
