--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,20 @@
 .Sidebar {
     height: 100%;
-    width: 10rem;
+    width: 20%;
+    padding: 1%;
+    background-color:lightgray;
+    border-right-color: black;
+    border-right: 1px;
+    border-right-style: solid;
+    flex-shrink: 0;
+}
+
+.Sidebar-ColorPicker
+{
+    width:"300%";
+    margin-top:"15px";
+    padding-top:"15px";
+    margin-left:"auto";
+    margin-right:"auto";
+    height:"90%";
 }
