--- a/src/Vertex.css
+++ b/src/Vertex.css
@@ -37,3 +37,22 @@
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.degnoselect
+{
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+  pointer-events: none;
+  padding-top: 0px;
+  padding: 0px;
+  margin: 0px;
+  width: fit-content;
+  overflow: visible;
+  flex-wrap: nowrap;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
